# gstlearn

./: .clang-format  .clang-tidy  .gitignore  CHANGES  CMakeLists.txt  Config.cmake.in  Makefile  Neutral.Model.h5  Neutral.Polyline.h5  Neutral.Rule.h5  Neutral.Table.h5  README.md  justfile  test_cova.py  test_neigh.py  version.h.in
.github/workflows/: check_code.yml  coverage-tests_python.yml  coverage-tests_r.yml  nonreg-demos-courses_python_ubuntu-latest.yml  nonreg-demos-courses_r_ubuntu-latest.yml  nonreg-demos-courses_ubuntu-latest.yml  nonreg-tests.yml  nonreg-tests_macos-latest.yml  nonreg-tests_ubuntu-latest.yml  nonreg-tests_windows-latest-msvc.yml  nonreg-tests_windows-latest-rtools.yml  publish-doc.yml  publish.yml  publish_courses.yml  publish_data.yml  publish_demos.yml  publish_doc.yml  publish_doxygen.yml  publish_python_macos.yml  publish_python_manylinux.yml  publish_python_ubuntu.yml  publish_python_windows.yml  publish_r_linux.yml  publish_r_macos.yml  publish_r_ubuntu.yml  publish_r_windows.yml  publish_references.yml
cmake/: FindNetCDF-CXX4.cmake  cpp.cmake  doxygen.cmake  install.cmake
doc/details/: derivatives.tex  lmc_constraints.tex
doc/dev/: clean_spurious_files.csh  draw_file.py
include/: geoslib_d.h  geoslib_define.h  geoslib_enum.h  geoslib_f.h  geoslib_f_private.h  geoslib_io.h  geoslib_old_f.h
include/API/: PGSSPDE.hpp  Potential.hpp  SPDE.hpp  SPDEParam.hpp  Style.hpp  TestInheritance.hpp  newAPIs.hpp
include/Anamorphosis/: AAnam.hpp  AnamContinuous.hpp  AnamDiscrete.hpp  AnamDiscreteDD.hpp  AnamDiscreteIR.hpp  AnamEmpirical.hpp  AnamHermite.hpp  AnamUser.hpp  CalcAnamTransform.hpp  PPMT.hpp
include/Arrays/: AArray.hpp  Array.hpp  BImage.hpp  BImageStringFormat.hpp
include/Basic/: AException.hpp  AFunction.hpp  AFunctional.hpp  ASerializable.hpp  AStringFormat.hpp  AStringable.hpp  ArgumentTest.hpp  CSVformat.hpp  Convolution.hpp  FFT.hpp  File.hpp  FunctionalSpirale.hpp  GlobalEnvironment.hpp  Grid.hpp  ICloneable.hpp  Indirection.hpp  Interval.hpp  Iterators.hpp  Law.hpp  Limits.hpp  ListParams.hpp  MathFunc.hpp  Memory.hpp  NamingConvention.hpp  Neutral.Db.h5  Neutral.Dbg.h5  Neutral.Polygon.h5  Neutral.Vario.h5  OptCst.hpp  OptCustom.hpp  OptDbg.hpp  Optim.hpp  ParamInfo.hpp  Plane.hpp  PolyLine2D.hpp  SerializeHDF5.hpp  SerializeNetCDF.hpp  SerializeNeutralFile.hpp  String.hpp  Tensor.hpp  (+5 more)
include/Boolean/: AShape.hpp  ModelBoolean.hpp  ShapeEllipsoid.hpp  ShapeHalfEllipsoid.hpp  ShapeHalfParaboloid.hpp  ShapeHalfSinusoid.hpp  ShapeParaboloid.hpp  ShapeParallelepiped.hpp  ShapeParameter.hpp
include/Calculators/: ACalcDbToDb.hpp  ACalcDbVarCreator.hpp  ACalcInterpolator.hpp  ACalculator.hpp  CalcGridToGrid.hpp  CalcMigrate.hpp  CalcSimuPost.hpp  CalcSimuPostDemo.hpp  CalcSimuPostPropByLayer.hpp  CalcStatistics.hpp
include/Core/: Acknowledge.hpp  Ascii.hpp  CSV.hpp  CTables.hpp  Keypair.hpp  Potential.hpp  Seismic.hpp  SparseInv.hpp  fftn.hpp  io.hpp  potential.hpp
include/Covariances/: ACov.hpp  ACovAnisoList.hpp  ACovFunc.hpp  ACovFuncWithAutoDiff.hpp  ACovGradient.hpp  ANoStat.hpp  CorAniso.hpp  CorGneiting.hpp  CorMatern.hpp  CovAniso.hpp  CovAnisoList.hpp  CovBase.hpp  CovBesselJ.hpp  CovCalcMode.hpp  CovCauchy.hpp  CovContext.hpp  CovCosExp.hpp  CovCosinus.hpp  CovCubic.hpp  CovDiffusionAdvection.hpp  CovExponential.hpp  CovFactory.hpp  CovGC1.hpp  CovGC3.hpp  CovGC5.hpp  CovGCspline.hpp  CovGCspline2.hpp  CovGamma.hpp  CovGaussian.hpp  CovGeometric.hpp  CovGradient.hpp  CovGradientAnalytic.hpp  CovGradientFunctional.hpp  CovGradientGeneric.hpp  CovGradientNumerical.hpp  CovHelper.hpp  CovLMCAnamorphosis.hpp  CovLMCConvolution.hpp  CovLMCTapering.hpp  CovLMGradient.hpp  (+26 more)
include/Db/: Db.hpp  DbCol.hpp  DbGraphO.hpp  DbGrid.hpp  DbHelper.hpp  DbLine.hpp  DbMeshStandard.hpp  DbMeshTurbo.hpp  DbStringFormat.hpp  PtrGeos.hpp  RankHandler.hpp
include/Drifts/: ADrift.hpp  DriftF.hpp  DriftFactory.hpp  DriftList.hpp  DriftM.hpp
include/Enum/: AEnum.hpp  EFormatNF.hpp  EModelProperty.hpp
include/Estimation/: ALikelihood.hpp  AModelOptim.hpp  AModelOptimFactory.hpp  CalcGlobal.hpp  CalcImage.hpp  CalcKriging.hpp  CalcKrigingFactors.hpp  CalcKrigingGradient.hpp  CalcKrigingSimpleCase.hpp  CalcSimpleInterpolation.hpp  KrigOpt.hpp  KrigingAlgebra.hpp  KrigingSystem.hpp  (+4 more)
python/: CMakeLists.txt  README.md  generated_python.i  pygstlearn.i  pyproject.toml.in  version.py.in
r/: CMakeLists.txt  README.md  generated_r.i  rgstlearn.i
src/: all_sources.cmake
swig/: swig_exp.i  swig_inc.i
tests/: CMakeLists.txt
(+834 files in other folders)
